--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-     <link rel="stylesheet" href ="src/style.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"/>
+     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <link rel="stylesheet" href ="src/style.css"/>
     <title>Weather App</title>
 </head>
 <body>
     <div class = "container">
+          <div class = "weather-app-wrapper">
         <div class = "weather-app">
+            <div class="overview">
 <h1>
     New York
 </h1>
@@ -22,13 +26,19 @@
         Clear
     </li>
 </ul>
+</div> 
 <div class="row">
     <div class ="col-6">
+       <div class="d-flex weather-temperature">
         <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" 
-        alt="Clear"
+        alt="Clear" 
+        class="float-left"
         />
-    12°C | °F
+      <div class="float-left">
+        <strong>12</strong><span class="units">°C | °F</span>
     </div>
+    </div>
+     </div>
  <div class="col-6">
     <ul>
         <li>
@@ -43,6 +53,7 @@
     </ul>
 </div>
 </div>
+</div>
 <small>
     <a href="https://github.com/aqmai622/weather-app-final" 
     target="_blank"
@@ -51,7 +62,6 @@
     by Ashley Mai
 </small>
 </div>
-
 </div>
 <script src="src/app.js"></script>
 </body>
