--- a/index.html
+++ b/index.html
@@ -15,16 +15,12 @@
           <div class = "weather-app-wrapper">
         <div class = "weather-app">
             <div class="overview">
-<h1>
-    New York
-</h1>
+<h1 id="city"></h1>
 <ul>
     <li>
         Friday 5:00
     </li>
-    <li>
-        Clear
-    </li>
+    <li id="description"></li>
 </ul>
 </div> 
 <div class="row">
@@ -35,20 +31,17 @@
         class="float-left"
         />
       <div class="float-left">
-        <strong>12</strong><span class="units">°C | °F</span>
+        <strong id="temperature"></strong><span class="units">°C | °F</span>
     </div>
     </div>
      </div>
  <div class="col-6">
     <ul>
         <li>
-            Precipitation: 0%
-        </li>
-        <li>
-         Humidity: 73%
+         Humidity: <span id="humidity"></span>%
         </li>
             <li>
-         Wind: 14 km/h
+         Wind: <span id="wind"></span> km/h
         </li>
     </ul>
 </div>
