--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 <div class="row">
     <div class ="col-6">
        <div class="d-flex weather-temperature">
-        <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" 
+        <img 
+        src="" 
         alt="Clear" 
+        id="icon"
         class="float-left"
         />
       <div class="float-left">
