--- a/index.html
+++ b/index.html
@@ -41,18 +41,19 @@
 <div class="row">
     <div class ="col-9">
        <div class="d-flex weather-temperature">
-        <img 
-        src="" 
+        <img src="" 
         alt="Clear" 
         id="icon"
-        class="float-left"
+        class="float-left" 
         />
       <div class="float-left">
-        <strong id="temperature"></strong><span class="units">°C | °F</span>
+        <strong id="temperature"></strong>
+        <span class="units"
+        >°C | <a href="#" id="fahrenheit-link">°F</a></span>
     </div>
     </div>
      </div>
- <div class="col-6">
+ <div class="col-3">
     <ul>
         <li>
          Humidity: <span id="humidity"></span>%
