--- a/index.html
+++ b/index.html
@@ -47,32 +47,32 @@
         class="float-left" 
         />
       <div class="float-left">
-        <strong id="temperature"></strong>
-        <span class="units">°C | <a href="#" id="fahrenheit-link">°F</a></span>
-    </div>
-    </div>
-     </div>
+         <strong id="temperature"></strong
+                  ><span class="units"
+                    ><a href="#" id="celsius-link" class="active">°C</a> |
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
+                </div>
+              </div>
+            </div>
  <div class="col-3">
     <ul>
-        <li>
-         Humidity: <span id="humidity"></span>%
-        </li>
-            <li>
-         Wind: <span id="wind"></span> km/h
-        </li>
-    </ul>
-</div>
-</div>
-</div>
-<small>
+       <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <small>
     <a href="https://github.com/aqmai622/weather-app-final" 
     target="_blank"
     >Open-source code</a
     >
     by Ashley Mai
 </small>
-</div>
-</div>
-<script src="src/app.js"></script>
-</body>
+      </div>
+    </div>
+    <script src="src/app.js"></script>
+  </body>
 </html>
