--- a/index.html
+++ b/index.html
@@ -66,6 +66,25 @@
               </ul>
             </div>
           </div>
+          <div class = "weather-forecast">
+            <div class = "row">
+            <div class="col-2">
+                <div class = "weather-forecast-date">
+                Thu
+                </div>
+                <img src="http://openweathermap.org/img/wn/04n@2x.png" 
+                alt=""  
+                width="42"
+                />
+                <div class="weather-forecast-temperatures">
+                    <span clas= "weather-forecast-temperature-max">
+                         18° </span>
+                         <span clas= "weather-forecast-temperature-min"></span>
+                          12°</div>
+          </div>
+          
+          </div>
+            </div>
         </div>
         <small>
     <a href="https://github.com/aqmai622/weather-app-final" 
