--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <div class="col-9">
                 <input
                   type="search"
-                  placeholder="Type a city :)"
+                  placeholder="Type a city.."
                   class="form-control"
                   id="city-input"
                   autocomplete="off"
@@ -66,26 +66,8 @@
               </ul>
             </div>
           </div>
-          <div class = "weather-forecast">
-            <div class = "row">
-            <div class="col-2">
-                <div class = "weather-forecast-date">
-                Thu
-                </div>
-                <img src="http://openweathermap.org/img/wn/04n@2x.png" 
-                alt=""  
-                width="42"
-                />
-                <div class="weather-forecast-temperatures">
-                    <span clas= "weather-forecast-temperature-max">
-                         18° </span>
-                         <span clas= "weather-forecast-temperature-min"></span>
-                          12°</div>
-          </div>
-          
-          </div>
-            </div>
-        </div>
+          <div class = "weather-forecast" id="forecast"> </div>
+             </div>
         <small>
     <a href="https://github.com/aqmai622/weather-app-final" 
     target="_blank"
