--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Weather App</title>
   </head>
   <body>
+
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
@@ -23,7 +24,7 @@
             <div class="row">
               <div class="col-9">
                 <input
-                  type="search"
+                  type="search" class="search-bar" 
                   placeholder="Type a city.."
                   class="form-control"
                   id="city-input"
