Changed color of search button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                   type="submit"
                   value="Search"
                   class="btn btn-primary w-100"
-                />
+                  <button style="background-color: #EEAAAB;"</button>
+                
               </div>
             </div>
           </form>
